libqt6c/src/libqlabel.hpp

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLabel QLabel;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMovie QMovie;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
QLabel* QLabel_new(QWidget* parent);
QLabel* QLabel_new2();
QLabel* QLabel_new3(const libqt_string text);
QLabel* QLabel_new4(QWidget* parent, int f);
QLabel* QLabel_new5(const libqt_string text, QWidget* parent);
QLabel* QLabel_new6(const libqt_string text, QWidget* parent, int f);
QMetaObject* QLabel_MetaObject(const QLabel* self);
libqt_string QLabel_Text(const QLabel* self);
QPixmap* QLabel_Pixmap(const QLabel* self, int param1);
QPixmap* QLabel_Pixmap2(const QLabel* self);
QPicture* QLabel_Picture(const QLabel* self, int param1);
QPicture* QLabel_Picture2(const QLabel* self);
QMovie* QLabel_Movie(const QLabel* self);
int QLabel_TextFormat(const QLabel* self);
void QLabel_SetTextFormat(QLabel* self, int textFormat);
void QLabel_SetResourceProvider(QLabel* self, intptr_t provider);
int QLabel_Alignment(const QLabel* self);
void QLabel_SetAlignment(QLabel* self, int alignment);
void QLabel_SetWordWrap(QLabel* self, bool on);
bool QLabel_WordWrap(const QLabel* self);
int QLabel_Indent(const QLabel* self);
void QLabel_SetIndent(QLabel* self, int indent);
int QLabel_Margin(const QLabel* self);
void QLabel_SetMargin(QLabel* self, int margin);
bool QLabel_HasScaledContents(const QLabel* self);
void QLabel_SetScaledContents(QLabel* self, bool scaledContents);
QSize* QLabel_SizeHint(const QLabel* self);
QSize* QLabel_MinimumSizeHint(const QLabel* self);
void QLabel_SetBuddy(QLabel* self, QWidget* buddy);
QWidget* QLabel_Buddy(const QLabel* self);
int QLabel_HeightForWidth(const QLabel* self, int param1);
bool QLabel_OpenExternalLinks(const QLabel* self);
void QLabel_SetOpenExternalLinks(QLabel* self, bool open);
void QLabel_SetTextInteractionFlags(QLabel* self, int flags);
int QLabel_TextInteractionFlags(const QLabel* self);
void QLabel_SetSelection(QLabel* self, int param1, int param2);
bool QLabel_HasSelectedText(const QLabel* self);
libqt_string QLabel_SelectedText(const QLabel* self);
int QLabel_SelectionStart(const QLabel* self);
void QLabel_SetText(QLabel* self, const libqt_string text);
void QLabel_SetPixmap(QLabel* self, const QPixmap* pixmap);
void QLabel_SetPicture(QLabel* self, const QPicture* picture);
void QLabel_SetMovie(QLabel* self, QMovie* movie);
void QLabel_SetNum(QLabel* self, int num);
void QLabel_SetNum2(QLabel* self, double num);
void QLabel_Clear(QLabel* self);
void QLabel_LinkActivated(QLabel* self, const libqt_string link);
void QLabel_LinkHovered(QLabel* self, const libqt_string link);
bool QLabel_Event(QLabel* self, QEvent* e);
void QLabel_KeyPressEvent(QLabel* self, QKeyEvent* ev);
void QLabel_PaintEvent(QLabel* self, QPaintEvent* param1);
void QLabel_ChangeEvent(QLabel* self, QEvent* param1);
void QLabel_MousePressEvent(QLabel* self, QMouseEvent* ev);
void QLabel_MouseMoveEvent(QLabel* self, QMouseEvent* ev);
void QLabel_MouseReleaseEvent(QLabel* self, QMouseEvent* ev);
void QLabel_ContextMenuEvent(QLabel* self, QContextMenuEvent* ev);
void QLabel_FocusInEvent(QLabel* self, QFocusEvent* ev);
void QLabel_FocusOutEvent(QLabel* self, QFocusEvent* ev);
bool QLabel_FocusNextPrevChild(QLabel* self, bool next);
void QLabel_Delete(QLabel* self);