QtBeef/src/Qt/qlabel.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QLabel
// --------------------------------------------------------------
[CRepr]
struct QLabel_Ptr: void
{
}
extension CQt
{
	[LinkName("QLabel_new")]
	public static extern QLabel_Ptr* QLabel_new(QWidget_Ptr* parent);
	[LinkName("QLabel_new2")]
	public static extern QLabel_Ptr* QLabel_new2();
	[LinkName("QLabel_new3")]
	public static extern QLabel_Ptr* QLabel_new3(libqt_string* text);
	[LinkName("QLabel_new4")]
	public static extern QLabel_Ptr* QLabel_new4(QWidget_Ptr* parent, void* f);
	[LinkName("QLabel_new5")]
	public static extern QLabel_Ptr* QLabel_new5(libqt_string* text, QWidget_Ptr* parent);
	[LinkName("QLabel_new6")]
	public static extern QLabel_Ptr* QLabel_new6(libqt_string* text, QWidget_Ptr* parent, void* f);
	[LinkName("QLabel_Delete")]
	public static extern void QLabel_Delete(QLabel_Ptr* self);
	[LinkName("QLabel_MetaObject")]
	public static extern QMetaObject_Ptr* QLabel_MetaObject(QLabel_Ptr* self);
	[LinkName("QLabel_Qt_Metacast")]
	public static extern void* QLabel_Qt_Metacast(QLabel_Ptr* self, c_char* param1);
	[LinkName("QLabel_Qt_Metacall")]
	public static extern c_int QLabel_Qt_Metacall(QLabel_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QLabel_Tr")]
	public static extern libqt_string QLabel_Tr(c_char* s);
	[LinkName("QLabel_Text")]
	public static extern libqt_string QLabel_Text(QLabel_Ptr* self);
	[LinkName("QLabel_Pixmap")]
	public static extern QPixmap_Ptr QLabel_Pixmap(QLabel_Ptr* self, Qt_ReturnByValueConstant param1);
	[LinkName("QLabel_Pixmap2")]
	public static extern QPixmap_Ptr QLabel_Pixmap2(QLabel_Ptr* self);
	[LinkName("QLabel_Picture")]
	public static extern QPicture_Ptr QLabel_Picture(QLabel_Ptr* self, Qt_ReturnByValueConstant param1);
	[LinkName("QLabel_Picture2")]
	public static extern QPicture_Ptr QLabel_Picture2(QLabel_Ptr* self);
	[LinkName("QLabel_Movie")]
	public static extern QMovie_Ptr* QLabel_Movie(QLabel_Ptr* self);
	[LinkName("QLabel_TextFormat")]
	public static extern Qt_TextFormat QLabel_TextFormat(QLabel_Ptr* self);
	[LinkName("QLabel_SetTextFormat")]
	public static extern void QLabel_SetTextFormat(QLabel_Ptr* self, Qt_TextFormat textFormat);
	[LinkName("QLabel_SetResourceProvider")]
	public static extern void QLabel_SetResourceProvider(QLabel_Ptr* self, void** provider);
	[LinkName("QLabel_Alignment")]
	public static extern void* QLabel_Alignment(QLabel_Ptr* self);
	[LinkName("QLabel_SetAlignment")]
	public static extern void QLabel_SetAlignment(QLabel_Ptr* self, void* alignment);
	[LinkName("QLabel_SetWordWrap")]
	public static extern void QLabel_SetWordWrap(QLabel_Ptr* self, bool on);
	[LinkName("QLabel_WordWrap")]
	public static extern bool QLabel_WordWrap(QLabel_Ptr* self);
	[LinkName("QLabel_Indent")]
	public static extern c_int QLabel_Indent(QLabel_Ptr* self);
	[LinkName("QLabel_SetIndent")]
	public static extern void QLabel_SetIndent(QLabel_Ptr* self, c_int indent);
	[LinkName("QLabel_Margin")]
	public static extern c_int QLabel_Margin(QLabel_Ptr* self);
	[LinkName("QLabel_SetMargin")]
	public static extern void QLabel_SetMargin(QLabel_Ptr* self, c_int margin);
	[LinkName("QLabel_HasScaledContents")]
	public static extern bool QLabel_HasScaledContents(QLabel_Ptr* self);
	[LinkName("QLabel_SetScaledContents")]
	public static extern void QLabel_SetScaledContents(QLabel_Ptr* self, bool scaledContents);
	[LinkName("QLabel_SizeHint")]
	public static extern QSize_Ptr QLabel_SizeHint(QLabel_Ptr* self);
	[LinkName("QLabel_MinimumSizeHint")]
	public static extern QSize_Ptr QLabel_MinimumSizeHint(QLabel_Ptr* self);
	[LinkName("QLabel_SetBuddy")]
	public static extern void QLabel_SetBuddy(QLabel_Ptr* self, QWidget_Ptr* buddy);
	[LinkName("QLabel_Buddy")]
	public static extern QWidget_Ptr* QLabel_Buddy(QLabel_Ptr* self);
	[LinkName("QLabel_HeightForWidth")]
	public static extern c_int QLabel_HeightForWidth(QLabel_Ptr* self, c_int param1);
	[LinkName("QLabel_OpenExternalLinks")]
	public static extern bool QLabel_OpenExternalLinks(QLabel_Ptr* self);
	[LinkName("QLabel_SetOpenExternalLinks")]
	public static extern void QLabel_SetOpenExternalLinks(QLabel_Ptr* self, bool open);
	[LinkName("QLabel_SetTextInteractionFlags")]
	public static extern void QLabel_SetTextInteractionFlags(QLabel_Ptr* self, void* flags);
	[LinkName("QLabel_TextInteractionFlags")]
	public static extern void* QLabel_TextInteractionFlags(QLabel_Ptr* self);
	[LinkName("QLabel_SetSelection")]
	public static extern void QLabel_SetSelection(QLabel_Ptr* self, c_int param1, c_int param2);
	[LinkName("QLabel_HasSelectedText")]
	public static extern bool QLabel_HasSelectedText(QLabel_Ptr* self);
	[LinkName("QLabel_SelectedText")]
	public static extern libqt_string QLabel_SelectedText(QLabel_Ptr* self);
	[LinkName("QLabel_SelectionStart")]
	public static extern c_int QLabel_SelectionStart(QLabel_Ptr* self);
	[LinkName("QLabel_SetText")]
	public static extern void QLabel_SetText(QLabel_Ptr* self, libqt_string* text);
	[LinkName("QLabel_SetPixmap")]
	public static extern void QLabel_SetPixmap(QLabel_Ptr* self, QPixmap_Ptr* pixmap);
	[LinkName("QLabel_SetPicture")]
	public static extern void QLabel_SetPicture(QLabel_Ptr* self, QPicture_Ptr* picture);
	[LinkName("QLabel_SetMovie")]
	public static extern void QLabel_SetMovie(QLabel_Ptr* self, QMovie_Ptr* movie);
	[LinkName("QLabel_SetNum")]
	public static extern void QLabel_SetNum(QLabel_Ptr* self, c_int num);
	[LinkName("QLabel_SetNum2")]
	public static extern void QLabel_SetNum2(QLabel_Ptr* self, double num);
	[LinkName("QLabel_Clear")]
	public static extern void QLabel_Clear(QLabel_Ptr* self);
	[LinkName("QLabel_LinkActivated")]
	public static extern void QLabel_LinkActivated(QLabel_Ptr* self, libqt_string* link);
	[LinkName("QLabel_LinkHovered")]
	public static extern void QLabel_LinkHovered(QLabel_Ptr* self, libqt_string* link);
	[LinkName("QLabel_Event")]
	public static extern bool QLabel_Event(QLabel_Ptr* self, QEvent_Ptr* e);
	[LinkName("QLabel_KeyPressEvent")]
	public static extern void QLabel_KeyPressEvent(QLabel_Ptr* self, QKeyEvent_Ptr* ev);
	[LinkName("QLabel_PaintEvent")]
	public static extern void QLabel_PaintEvent(QLabel_Ptr* self, QPaintEvent_Ptr* param1);
	[LinkName("QLabel_ChangeEvent")]
	public static extern void QLabel_ChangeEvent(QLabel_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QLabel_MousePressEvent")]
	public static extern void QLabel_MousePressEvent(QLabel_Ptr* self, QMouseEvent_Ptr* ev);
	[LinkName("QLabel_MouseMoveEvent")]
	public static extern void QLabel_MouseMoveEvent(QLabel_Ptr* self, QMouseEvent_Ptr* ev);
	[LinkName("QLabel_MouseReleaseEvent")]
	public static extern void QLabel_MouseReleaseEvent(QLabel_Ptr* self, QMouseEvent_Ptr* ev);
	[LinkName("QLabel_ContextMenuEvent")]
	public static extern void QLabel_ContextMenuEvent(QLabel_Ptr* self, QContextMenuEvent_Ptr* ev);
	[LinkName("QLabel_FocusInEvent")]
	public static extern void QLabel_FocusInEvent(QLabel_Ptr* self, QFocusEvent_Ptr* ev);
	[LinkName("QLabel_FocusOutEvent")]
	public static extern void QLabel_FocusOutEvent(QLabel_Ptr* self, QFocusEvent_Ptr* ev);
	[LinkName("QLabel_FocusNextPrevChild")]
	public static extern bool QLabel_FocusNextPrevChild(QLabel_Ptr* self, bool next);
	[LinkName("QLabel_Tr2")]
	public static extern libqt_string QLabel_Tr2(c_char* s, c_char* c);
	[LinkName("QLabel_Tr3")]
	public static extern libqt_string QLabel_Tr3(c_char* s, c_char* c, c_int n);
}
